# TC2015

./: .gitignore  CMakeLists.txt  README.md  package.xml
Document/Report/: .gitignore  tc2015_report.tex  tc2015_utf.sty
Document/Tsukuba_Challenge/: 07-TC2015_robotnumber-kitc3.pptx  07-TC2015_robotnumber.pptx  08-TC2015_nameplate.docx  当日の注意事項ファイル一覧.lzh
fourth_robot/: .gitignore  fourth_robot.rosinstall
fourth_robot/fourth_robot_driver/: CMakeLists.txt  package.xml
include/: radio_class.hpp
include/ThirdRobotInterface/: ThirdRobotInterface.h
launch/: third_robot_send_goals.launch
src/: radio_class.cpp  third_robot_driver.cpp  third_robot_driver_radio.cpp  third_robot_save_goals.cpp  third_robot_send_goals.cpp
src/ThirdRobotInterface/: ThirdRobotInterface.cpp
third_robot/: README.md  third_robot.rosinstall
third_robot/scripts/: rosbag_for_mapping.bash  set_ROS_local.bash
third_robot/third_robot_avoidance_limiter/: CMakeLists.txt  package.xml
third_robot/third_robot_chess_recognize/: CMakeLists.txt  README.md  package.xml
third_robot/third_robot_driver/: CMakeLists.txt
third_robot/third_robot_gmapping/: CMakeLists.txt  README.md  package.xml
third_robot/third_robot_sound/: CMakeLists.txt  package.xml
third_robot/third_robot_sound/src/: sound_client.cpp  sound_server.cpp
third_robot/third_robot_sound/srv/: sound_service.srv
waypoints/: fullmap2.csv  kyutech141106.csv  tobata150209-01.csv  tsukuba_center141112_v2.csv  tsukuba_center141112_v3.csv  tsukuba_center141112_v4.csv  tsukuba_center141112_v5.csv  tsukuba_oshimizu141114-1.csv  tsukuba_oshimizu141114-2_vector3.csv  tsukuba_oshimizu141114-2_vector3.csv~  waypoints.csv
(+122 files in other folders)
